--- a/Hands-On_Ex/Hands-On_Ex2/Hands-On_Ex2.qmd
+++ b/Hands-On_Ex/Hands-On_Ex2/Hands-On_Ex2.qmd
@@ -39,7 +39,7 @@ Performing relational join
 hunan <- left_join(hunan, hunan2012)
 ```
 
-Visualising regional development indicator
+### Visualising regional development indicator
 
 Preparing a basemap and choropleth map showing the distribution of GDPPC 2012 by using qtm()
 
@@ -315,11 +315,7 @@ tm_shape(hunan.localMI)+
   tm_borders(alpha=0.5)
 ```
 
-<<<<<<< HEAD
 #### Mapping both local Moran's I values and p-values
-=======
-####  Mapping both local Moran's I values and p-values
->>>>>>> a36d855d8911fd4773a3be2425f72afaa1752cdc
 
 For better interpretation, it is better to plot both loal Moran's I values map and its corresponding p-values next to each other
 
@@ -340,11 +336,11 @@ pvalue.map <- tm_shape(hunan.localMI)+
 tmap_arrange(localMI.map, pvalue.map, asp=1, ncol=2)
 ```
 
-## Creating a LISA Cluster Map
+### Creating a LISA Cluster Map
 
 LISA cluster map shows the significant locations color coded by type of spatial autocorrelation. First step is to plot the Moran scatterplot.
 
-### Plotting Moran scatterplot
+#### Plotting Moran scatterplot
 
 Moran scatterplot is an illustration of the relationship between the values of the chosen attribute at each location and the average value of the same attribute at neighbouring locations.
 
@@ -357,7 +353,7 @@ nci <- moran.plot(hunan$GDPPC, rswm_q,
                 ylab = "Spatially Lag GDPPC 2012")
 ```
 
-### Plotting Moran scatterplot with standardised variable
+#### Plotting Moran scatterplot with standardised variable
 
 Centre and scales the variable using scale(). Centering is done by subtracting the mean(omitting the NAs) the corresponding colums, and scaling is done by dividing the (centered) variable by their standard deviations.
 
@@ -376,7 +372,7 @@ nci2 <- moran.plot(hunan$GDPPC, rswm_q,
                    ylab= "Spatially Lag z-GDPPC 2012")
 ```
 
-### Preparing LISA map classes
+Preparing LISA map classes
 
 ```{r}
 quadrant <- vector(mode="numeric", length=nrow(localMI))
@@ -404,14 +400,9 @@ Four command lines to define high-high, low-low, low-high, high-low categories
 
 ```{r}
 quadrant[DV > 0 & C_mI>0] <-4
-<<<<<<< HEAD
-quadrant[DV < 0 & C_mI<0] <-2
+quadrant[DV < 0 & C_mI<0] <-3
+quadrant[DV > 0 & C_mI<0] <-2
 quadrant[DV < 0 & C_mI>0] <-1
-=======
-quadrant[DV < 0 & C_mI<0] <-1
-quadrant[DV < 0 & C_mI>0] <-2
->>>>>>> a36d855d8911fd4773a3be2425f72afaa1752cdc
-quadrant[DV > 0 & C_mI<0] <-3
 ```
 
 Lastly, place non-significant Moran in category 0
@@ -427,19 +418,14 @@ quadrant <- vector(mode="numeric",length=nrow(localMI))
 DV <- hunan$GDPPC - mean(hunan$GDPPC)     
 C_mI <- localMI[,1] - mean(localMI[,1])    
 signif <- 0.05       
-quadrant[DV >0 & C_mI>0] <- 4      
-<<<<<<< HEAD
-quadrant[DV <0 & C_mI<0] <- 2      
-quadrant[DV <0 & C_mI>0] <- 1
-=======
-quadrant[DV <0 & C_mI<0] <- 1      
-quadrant[DV <0 & C_mI>0] <- 2
->>>>>>> a36d855d8911fd4773a3be2425f72afaa1752cdc
-quadrant[DV >0 & C_mI<0] <- 3
+quadrant[DV > 0 & C_mI>0] <-4
+quadrant[DV < 0 & C_mI<0] <-3
+quadrant[DV > 0 & C_mI<0] <-2
+quadrant[DV < 0 & C_mI>0] <-1
 quadrant[localMI[,5]>signif] <- 0
 ```
 
-### Plotting LISA map
+Plotting LISA map
 
 ```{r}
 
@@ -451,17 +437,11 @@ tm_shape(hunan.localMI)+
   tm_fill(col = "quadrant",
           style = "cat",
           palette = colors[c(sort(unique(quadrant)))+1],
-<<<<<<< HEAD
           labels = clusters[c(sort(unique(quadrant)))+1],
           popup.vars = c(""))+
   tm_view(set.zoom.limits = c(11,17))+
   tm_borders(alpha = 0.5)
-=======
-          lables = clusters[c(sort(unique(quadrant)))+1],
-          popup.vars = c(""))+
-            tm_view(set.zoom.limits = c(11,17))+
-            tm_borders(alpha = 0.5)
->>>>>>> a36d855d8911fd4773a3be2425f72afaa1752cdc
+
 ```
 
 For effective interpretation, it is better to plot both local Moran's I values map and its corresponding p-values next to each other
@@ -477,11 +457,7 @@ LISAmap <- tm_shape(hunan.localMI)+
   tm_fill(col = "quadrant",
           style = 'cat',
           palette = colors[c(sort(unique(quadrant)))+1],
-<<<<<<< HEAD
           labels = clusters[c(sort(unique(quadrant)))+1],
-=======
-          lables = clusters[c(sort(unique(quadrant)))+1],
->>>>>>> a36d855d8911fd4773a3be2425f72afaa1752cdc
           popup.vars = c(""))+
   tm_view(set.zoom.limits = c(11,17))+
   tm_borders(alpha=0.5)
@@ -489,13 +465,13 @@ LISAmap <- tm_shape(hunan.localMI)+
 tmap_arrange(gdppc, LISAmap, asp=1, ncol=2)
 ```
 
-## Hot spot and cold spot area analysis
+Hot spot and cold spot area analysis
 
 Besides detecting clusters and outliers, localised spatial statistics can also detect hot spot and/or cold spot areas
 
 "Hot spot" generally used across disciplines to describe a region or value that is higher relative to its surroundings
 
-### Getis and Ord's G-statistics
+Getis and Ord's G-statistics
 
 Getis and Ord's G is an alternative spatial statistics to detect spatial anomalies. It looks at neighbours within a defined proximity to identify where either high or low values clusters spatially. Statistically significant hot spots are recognised as areas of high values where other areas within a neighbourhood also share high values too
 
@@ -507,7 +483,7 @@ Analysis consists three steps:
 
 -   Mapping Gi statistics
 
-### Deriving distance-based weight matrix
+Deriving distance-based weight matrix
 
 First, define a new set of neighbours. For Getis-Ord, define neighbours based on distance. Two types of distance-based proximity matrix:
 
@@ -515,20 +491,11 @@ First, define a new set of neighbours. For Getis-Ord, define neighbours based on
 
 -   adaptive distance weight matrix
 
-#### Deriving centroid
+Deriving centroid
 
-<<<<<<< HEAD
 First, points are needed to associate with each polygon. It will more complicated than just running *st_centroid()* on the sf object: **us.bound**. We need the coordinates in a separate data frame for this to work. To do this, use a mapping function, which will apply a given function to each element of a vector and returns a vector of the same length. Our input vector will be the geometry column of us.bound. Our function will be *st_centroid()*. We will be using map_dbl variation of map from the purrr package.
 
 To get longitude values, map the *st_centroid()* function over the geometry column of us.bound and access the longitude value through double bracket notation \[\[\]\] and 1. This will get only the longitude, which is the first value in each centroid.
-=======
-First, points are needed to associate with each polygon. It will more complicated than just running *st_centroid()* on the sf object: **us.bound**. We need the coordinates in a separate data frame for this to work. To do this, use a mapping function, which will apply a given function to each element of a vector and returns a vector of the
-same length. Our input vector will be the geometry column of us.bound. Our function will be *st_centroid()*. We will be using map_dbl variation of map from the purrr package.
-
-
-To get longitude values, map the *st_centroid()* function
-over the geometry column of us.bound and access the longitude value through double bracket notation \[\[\]\] and 1. This will get only the longitude, which is the first value in each centroid.
->>>>>>> a36d855d8911fd4773a3be2425f72afaa1752cdc
 
 ```{r}
 longitude <- map_dbl(hunan$geometry, ~st_centroid(.x)[[1]])
@@ -546,11 +513,6 @@ Use cbind to put longitude and latitude into the same object.
 coords <- cbind(longitude, latitude)
 ```
 
-#### 
-<<<<<<< HEAD
-
-=======
->>>>>>> a36d855d8911fd4773a3be2425f72afaa1752cdc
 Determine the cut off distance
 
 Firstly, determine the upper limit for distance band by using the steps below:
@@ -580,12 +542,7 @@ wm_d62 <- dnearneigh(coords, 0, 62, longlat = TRUE)
 wm_d62
 ```
 
-<<<<<<< HEAD
 Next, *nb2listw()* is used to convert the nb object into spatial weights object. The output spatial weights object is called `wm62_lw`.
-=======
-Next, *nb2listw()* is used to convert the nb object into spatial weights object.
-The output spatial weights object is called `wm62_lw`.
->>>>>>> a36d855d8911fd4773a3be2425f72afaa1752cdc
 
 ```{r}
 wm62_lw <- nb2listw(wm_d62, style = 'B')
@@ -594,12 +551,7 @@ summary(wm62_lw)
 
 ### Computing adaptive distance weight matrix
 
-<<<<<<< HEAD
 One of the characteristics of fixed distance weight matrix is that more densely settled areas (usually the urban areas) tend to have more neighbours and the less densely settled areas (usually the rural counties) tend to have lesser neighbours. Having many neighbours smoothes the neighbour relationship across more neighbours.
-=======
-One of the characteristics of fixed distance weight matrix is that more densely settled areas (usually the urban areas) tend to have more neighbours and the less densely settled areas (usually the rural
-counties) tend to have lesser neighbours. Having many neighbours smoothes the neighbour relationship across more neighbours.
->>>>>>> a36d855d8911fd4773a3be2425f72afaa1752cdc
 
 It is possible to control the numbers of neighbours directly using k-nearest neighbours, either accepting asymmetric neighbours or imposing symmetry
 
@@ -617,13 +569,9 @@ summary(knn_lw)
 
 ### Computing Gi statistics
 
-Gi statistics using fixed distance
+#### Gi statistics using fixed distance
 
-<<<<<<< HEAD
 The output of localG() is a vector of G or Gstar values, with attributes "gstari" set to TRUE or FALSE, "call" set to the function call, and class "localG".
-=======
-The output of localG() is a vector of G or Gstar values, with attributes \"gstari\" set to TRUE or FALSE, \"call\" set to the function call, and class \"localG\".
->>>>>>> a36d855d8911fd4773a3be2425f72afaa1752cdc
 
 The Gi statistics is represented as a Z-score. Greater values represent a greater intensity of clustering and the direction (positive or negative) indicates high or low clusters.
 
@@ -633,12 +581,7 @@ gi.fixed <- localG(hunan$GDPPC, wm62_lw)
 gi.fixed
 ```
 
-<<<<<<< HEAD
 Next, join the Gi values to their corresponding hunan sf data frame by using the code chunk below. The code chunk will perform three tasks. First, it convert the output vector (i.e. *gi.fixed*) into r matrix object by using *as.matrix()*. Next, *cbind()* is used to join hunan\@data and *gi.fixed* matrix to produce a new SpatialPolygonDataFrame called *hunan.gi*. Lastly, the field name of the gi values is renamed to *gstat_fixed* by using *rename()*.
-=======
-Next, join the Gi values to their corresponding hunan sf data frame by using the code chunk below.
-The code chunk will perform three tasks. First, it convert the output vector (i.e. *gi.fixed*) into r matrix object by using *as.matrix()*. Next, *cbind()* is used to join hunan\@data and *gi.fixed* matrix to produce a new SpatialPolygonDataFrame called *hunan.gi*. Lastly, the field name of the gi values is renamed to *gstat_fixed* by using *rename()*.
->>>>>>> a36d855d8911fd4773a3be2425f72afaa1752cdc
 
 ```{r}
 hunan.gi <- cbind(hunan, as.matrix(gi.fixed)) %>%
