--- a/index.qmd
+++ b/index.qmd
@@ -12,3 +12,4 @@ Starting from:
 2.  Chropleth Mapping with R
 3.  Spatial Weights and Applications
 4.  Global and Local Measures of Spatial Autocorrelation
+5.  Geographical Segmentation with Spatially Constrained Clustering Techniques
